# jqrtc

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
docs/: jax-port.md  numpy-port.md
examples/: implementation_comparison.py  jax_tracking_simulation.py  tracking_simulation.py
jqrtc/: __init__.py  controller.py  factory.py  jax_controller.py  jax_kinematics.py  jax_simulator.py  jax_utils.py  jax_visualization.py  kinematics.py  simulator.py  utils.py  visualization.py
quadrotor/: controller.py  simulator.py  visualization.py
tests/: conftest.py  test_controller.py  test_factory.py  test_integration.py  test_kinematics.py  test_simulator.py  test_utils.py
