[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jqrtc"
version = "0.1.0"
description = "Python/NumPy port of quadrotor tracking control simulation"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Python port by Serrano, original MATLAB by wjxjmj"},
]
keywords = [
    "quadrotor",
    "control systems",
    "simulation",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Repository = "https://github.com/bybunni/jqrtc"
Documentation = "https://github.com/bybunni/jqrtc/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["jqrtc"]

[tool.hatch.build.targets.sdist]
include = [
    "jqrtc",
    "docs",
    "examples",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
